--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>This site was created by Or Mizrahi. It uses data from mapbox.com and weatherstack.com!</p>
+        <p>This site was created by {{name}}. It uses data from mapbox.com and weatherstack.com!</p>
         <img class='portrait' src='./img/me.png'>
     </div>
 
