--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -4,8 +4,7 @@
 
 <head>
     <title>404</title>
-    <link rel='icon' href='/img/weather.png'>
-    <link rel='stylesheet' href="/css/styles.css">
+    {{>head}}
 </head>
 
 <body>
